fixed spacing in header

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -693,9 +693,20 @@ background-color:#1f1f1f;
 
 @media only screen and (max-width: 579px) {
   
-    .headerImage{
-      width: 100%;
-      max-width: 450px;
+  .headerImage {
+    display: none;
+    }
+    .intro {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 60px 15px 0px 25px;
+    padding-right: 0px;
     }
     
     .processImage {
@@ -734,7 +745,11 @@ background-color:#1f1f1f;
     text-align: left;
     color: #25282b;
    }
-
+.finalText {
+  font-family: PlayfairDisplay;
+    font-size: 30px;
+    font-weight: bold;
+}
    #img1 {display: none;}
    #img2 {display: block;}
   
